--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:id="@+id/container_detail"
              android:layout_height="match_parent"
-             android:background="@color/colorPrimary"
+             android:background="@color/gray"
              tools:context=".FragmentDetail">
 
 
