--- a/app/src/main/res/layout/model_fragment.xml
+++ b/app/src/main/res/layout/model_fragment.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ModelFragment">
-
+   <include layout="@layout/fragment_toolbar"/>
     <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
